--- a/app/src/main/res/layout/activity_writing.xml
+++ b/app/src/main/res/layout/activity_writing.xml
@@ -29,23 +29,39 @@
         android:layout_weight="7"
         android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/edit_b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="2dp"
+            android:layout_weight="5"
+            android:background="#00FFFFFF"
+            android:fontFamily="@font/nanumgothic_normal"
+            android:paddingRight="10dp"
+            android:text="수정"
+            android:textColor="@color/default_text"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
+
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="13dp"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:src="@drawable/star_bar3" />
 
         <Button
             android:id="@+id/finish_writing"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
             android:layout_weight="5"
             android:background="#00FFFFFF"
             android:fontFamily="@font/nanumgothic_normal"
-            android:paddingRight="11dp"
             android:text="등록"
             android:textColor="@color/default_text"
             android:textSize="18sp"
