--- a/app/src/main/res/layout/activity_makegroup.xml
+++ b/app/src/main/res/layout/activity_makegroup.xml
@@ -35,7 +35,7 @@
                 android:src="@drawable/ic_star_2" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/G_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
@@ -51,7 +51,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/G_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -94,20 +94,9 @@
             android:layout_marginRight="15dp"
             android:layout_weight="2.5"
             android:fontFamily="@font/nanumgothic_normal"
-            android:text="대신, 다른 별들의 얘기를 들어보려면\n이번 주제에 대해 먼저 느낀점을 등록해야해요.\n이번 주제는 홈 화면의 버튼을 누르면 볼 수 있어요!"
+            android:text="부끄럼쟁이 별들을 위해\n게시판은 익명 시스템이에요.\n(2인이상인 경우만)"
             android:textColor="@color/default_text"
             android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_weight="2.5"
-            android:fontFamily="@font/nanumgothic_normal"
-            android:text="그룹장이 되면 다른 별들을 관리할 수 있고,\n또 다른 별들을 무리에 들어오게 할 수 있어요!"
-            android:textColor="@color/default_text" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -118,7 +107,7 @@
             android:paddingTop="30dp">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/Now"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
