--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -81,50 +81,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/kick"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_border"
-                android:fontFamily="@font/nanumgothic_light"
-                android:text="강퇴"
-                android:textColor="@color/default_text"
-                android:visibility="invisible" />
-
-            <Button
-                android:id="@+id/give_king"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_border"
-                android:fontFamily="@font/nanumgothic_light"
-                android:text="그룹장 위임"
-                android:textColor="@color/default_text"
-                android:visibility="invisible" />
-
-            <Button
-                android:id="@+id/join_allow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_border"
-                android:fontFamily="@font/nanumgothic_light"
-                android:text="가입 승인"
-                android:textColor="@color/default_text"
-                android:visibility="invisible" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="5"
             android:orientation="horizontal">
 
             <Button
@@ -161,6 +118,18 @@
                 android:background="@drawable/button_border"
                 android:fontFamily="@font/nanumgothic_light"
                 android:text="그룹 탈퇴"
+                android:textColor="@color/default_text"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/show_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_border"
+                android:fontFamily="@font/nanumgothic_light"
+                android:text="초대"
                 android:textColor="@color/default_text"
                 android:visibility="gone" />
         </LinearLayout>
